# mondossierweb-parser

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml
.github/workflows/: docker.yml
mondossierweb/: __main__.py
nix/: default.nix  fix_helium_firefox_profile.patch  gotify.nix  helium.nix  overlay.nix  package.nix
