[tool.poetry]
name = "mondossierweb"
version = "0.1.2"
description = "Parses grades out of mondossierweb\u001b[1;5D\u001b[1;5D\u001b[1;5D"
authors = ["Ewen Le Bihan <hey@ewen.works>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
beautifulsoup4 = "4.13.*"
helium = "5.1.*"
lxml = "5.4.*"
pyvirtualdisplay = "^3.0"
gotify = "^0.6.0"
requests = "2.32.*"

[tool.poetry.scripts]
mondossierweb = "mondossierweb.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"